[gd_scene load_steps=5 format=3 uid="uid://c5n6iq7qnnxxc"]

[ext_resource type="PackedScene" uid="uid://54b4gysqftl3" path="res://scenes/kenban.tscn" id="1_bdthf"]
[ext_resource type="PackedScene" uid="uid://2jtchecwew7c" path="res://scenes/chord_manager.tscn" id="2_r1xel"]
[ext_resource type="Script" path="res://scripts/select_chord_list.gd" id="3_bp278"]
[ext_resource type="Script" path="res://scripts/play_button.gd" id="4_jd3yb"]

[node name="SelectChord" type="Node2D"]

[node name="kenban" parent="." instance=ExtResource("1_bdthf")]

[node name="ChordManager" parent="." instance=ExtResource("2_r1xel")]

[node name="SelectChordList" type="OptionButton" parent="."]
offset_left = 258.0
offset_top = 158.0
offset_right = 290.0
offset_bottom = 178.0
script = ExtResource("3_bp278")

[node name="PlayButton" type="Button" parent="."]
offset_left = 148.0
offset_top = 153.0
offset_right = 189.0
offset_bottom = 184.0
text = "Play"
script = ExtResource("4_jd3yb")

[connection signal="pressed" from="PlayButton" to="PlayButton" method="_on_pressed"]
